Reserve space for breadcrumb trail to prevent layout shift

--- a/src/components/BreadcrumbTrail/BreadcrumbTrail.module.scss
+++ b/src/components/BreadcrumbTrail/BreadcrumbTrail.module.scss
@@ -12,7 +12,6 @@
 .breadcrumb-list-item {
 	display: inline-block;
 	list-style-type: none;
-	margin-block: 1rem;
 }
 
 .breadcrumb-list-item[data-root="false"]::before {
